# collect_data

./: README.md  conversations.db  conversations.json  main.py  pyproject.toml  requirements.txt  write_sheet.py
templates/: index.html
